fix: z-index for bg

--- a/Templates/Galileo/src/assets/css/includes/_global.scss
+++ b/Templates/Galileo/src/assets/css/includes/_global.scss
@@ -225,4 +225,5 @@ Global elements
     background-size: cover;
     background-position: center;
     opacity: .04;
+    z-index: -1;
 }
